Contrast errors fixed.

--- a/styles/base.css
+++ b/styles/base.css
@@ -208,4 +208,5 @@ footer p:last-child {
 
 #dark {
   font-size: 2rem;
+  background-color: white;
 }
